# Evaluation-for-Overlap-Detection

./: .gitignore  CMakeLists.txt  README.md
data/: ovlp.hse  test.fasta  test.maf  test.paf
exe_sh/: mine.sh
exe_sh/minimap2_mapped/ecoli/: hse.sh  mhp.sh  mnp2.sh
exe_sh/minimap2_mapped/scere/: hse.sh  mhp.sh  mnp2.sh
exe_sh/mnp2_map_sim_reads/human/: mine.sh  mnp2.sh
exe_sh/mnp2_map_sim_reads/scere/: mnp2.sh
exe_sh/pbsim/celegans/: hse.sh  mine.sh  mnp2.sh
exe_sh/pbsim/drosophila/: hse.sh  mhp.sh  mine.sh  mnp2.sh  smq.sh
exe_sh/pbsim/ecoli/: hse.sh  mhp.sh  mine.sh  mnp2.sh  smq.sh  test.sh
exe_sh/pbsim/human/era1/D20/: hse.sh  mine.sh  mnp2.sh
exe_sh/pbsim/human/era1/D80/: hse.sh  mine.sh  mnp2.sh
exe_sh/pbsim/human/era2/chr1/: hse.sh  mhp.sh  mine.sh  mnp2.sh
exe_sh/pbsim/human/era2/d20/: hse.sh  mhp.sh  mine.sh  mnp2.sh
exe_sh/pbsim/human/era2/whole_d5/: hse.sh  mhp.sh  mine.sh  mnp2.sh
exe_sh/pbsim/scere/era1/: hse.sh  mhp.sh  mine.sh  mnp2.sh  smq.sh
exe_sh/pbsim/scere/era2/: hse.sh  mhp.sh  mine.sh  mnp2.sh
include/: alignment.hpp  config.hpp  evaluator.hpp  options.hpp  overlap.hpp  read.hpp  rp_logger.hpp  utils.hpp
include/file_io/: fasta_record.hpp  fastq_record.hpp  hse_record.hpp  maf_record.hpp  mhp_record.hpp  ovl_record.hpp  paf_record.hpp
output/: shrink_rps  shrink_rps.cpp
src/: main.cpp  options.cpp
